# mcp-apps-shopping-demo

./: .gitignore  CLAUDE.md  README.md  ROADMAP.md  app.test.ts  app.ts  catalog.test.ts  catalog.ts  checkout-items.test.ts  checkout.test.ts  checkout.ts  main.ts  mcp-app.html  orderStore.test.ts  orderStore.ts  package-lock.json  package.json  requirements.txt  server.ts  tsconfig.server.json  vercel.json  verificationStore.test.ts  verificationStore.ts  vite.config.ts
.github/workflows/: claude-code-review.yml
ap2-sidecar/: README.md  _vendor.py  app.py  conftest.py  keys.py  mandate_build.py  mandate_verify.py  models.py  pyproject.toml
ap2-sidecar/tests/: test_build.py  test_health.py  test_roundtrip.py  test_vendor.py  test_verify.py
api/ap2/: index.py
docs/: google-ap2-collaboration-log.md  hedera-x402-ap2-joint-poc-thread.md  instacart-demo-notes.md  instacart-gemini-demo-notes.md  youtube-descriptions.md
docs/diagrams/: delegated-a2a-purchase.html  topology-a-today.excalidraw  topology-b-ucp-adapter.excalidraw  topology.html  why-checkout-mcp-server.excalidraw
payment-gate/: README.md  ap2Client.contract.test.ts  ap2Client.ts  ap2Sidecar.ts  challengeToken.test.ts  challengeToken.ts  completion.test.ts  completion.ts  inspect.test.ts  inspect.ts  mandate.test.ts  mandate.ts  qr.test.ts  qr.ts
payment-gate/credential-gate/: dcql.test.ts  dcql.ts  page.ts  request.test.ts  request.ts  routes.ts  verify.test.ts  verify.ts
payment-gate/dc-payment/: README.md  fixtures.ts  mandate.test.ts  mandate.ts  mdoc.ts  (+9 more)
src/: app.module.css  app.tsx  global.css
(+31 files in other folders)
